--- a/front-react/src/index.css
+++ b/front-react/src/index.css
@@ -11,12 +11,12 @@ body {
 }
 
 .topnav a {
-float: left;
-color: #f2f2f2;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-font-size: 17px;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 .topnav-middle {
@@ -24,15 +24,15 @@ font-size: 17px;
 }
 
 .topnav a:hover {
-background-color: #ddd;
-color: black;
+  background-color: #ddd;
+  color: black;
 }
 
 .topnav a.active {
-background-color: #04AA6D;
-color: white;
+  background-color: #04aa6d;
+  color: white;
 }
-  
+
 .topnav-right {
   float: right;
 }
@@ -51,6 +51,7 @@ color: white;
 .Survey-box:hover {
   background-color: rgb(236, 236, 175);
 }
+
 
 .wrapper {
   max-width: 75vw;
