--- a/front-react/src/index.css
+++ b/front-react/src/index.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&family=Poppins:wght@300;400&family=Work+Sans:wght@300;400;500;700&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+
+}
+
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  /* font-family: 'Work Sans', sans-serif; */
   background-color: #f2f2f2;
 }
 
@@ -81,4 +89,15 @@ body {
 
 .normal-height {
   height: 2em;
+}
+
+.extra-margin {
+  margin: 30px 0px 150px 0px;
+}
+
+.title-bgd {
+  background-color: #333;
+  padding: 50px;
+  color: #ddd;
+  border-radius: 5px;
 }
